fix(layout): fix border-radius on safari

--- a/src/styles/layers.css
+++ b/src/styles/layers.css
@@ -70,7 +70,9 @@
   }
 
   button {
-    @apply tracking-normal;
+    @apply tracking-normal appearance-none;
+
+    -webkit-appearance: none;
   }
 
   .text-link {
@@ -371,23 +373,18 @@
     --h: calc(var(--size-burger) - 2px);
 
     @apply flex items-center justify-center;
-    @apply text-current outline outline-1 -outline-offset-1 outline-current rounded-full;
+    @apply text-current border border-current rounded-full;
     @apply transition-all duration-300 ease-out-quart;
-    @media (hover: hover) {
-      &:hover {
-        @apply rotate-90;
-      }
-    }
 
     width: var(--w);
     height: var(--h);
     margin-right: 1px;
   }
 
-  .nav-button {
+  .close-button {
     @media (hover: hover) {
       &:hover {
-        @apply rotate-0;
+        @apply rotate-90;
       }
     }
   }
